feat: add more sample data for tests